[package]
name = "post-cache-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "http2"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
clap = { version = "4", features = ["cargo"] }
env_logger = "0.11"
kstool-helper-generator = "0.4"
log = "0.4"
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
] }
rusty-leveldb = "3.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
